--- a/coloringPg.html
+++ b/coloringPg.html
@@ -13,6 +13,18 @@
 </head>
 <body>
     <canvas height = "800" width = "800"></canvas>
+    <button id = "red">Red</button>
+    <button id = "orange">Orange</button>
+    <button id = "yellow">Yellow</button>
+    <button id = "green">Green</button>
+    <button id = "blue">Blue</button>
+    <button id = "purple">Purple</button>
+    <button id = "pink">Pink</button>
+    <button id = "white">White</button>
+    <button id = "black">Black</button>
+    <button id = "clear">Clear</button>
     <script src = "coloringPg.js"></script>
 </body>
 </html>
+
+
