--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
     <canvas height = "800" width = "800"></canvas>
-    <button id = "red">Red</button>
-    <button id = "orange">Orange</button>
-    <button id = "yellow">Yellow</button>
-    <button id = "green">Green</button>
-    <button id = "blue">Blue</button>
-    <button id = "purple">Purple</button>
-    <button id = "pink">Pink</button>
-    <button id = "white">White</button>
-    <button id = "black">Black</button>
+    <button class = "colorBtn" data-key = "red">Red</button>
+    <button class = "colorBtn" data-key = "orange">Orange</button>
+    <button class = "colorBtn" data-key = "yellow">Yellow</button>
+    <button class = "colorBtn" data-key = "green">Green</button>
+    <button class = "colorBtn" data-key = "blue">Blue</button>
+    <button class = "colorBtn" data-key = "purple">Purple</button>
+    <button class = "colorBtn" data-key = "pink">Pink</button>
+    <button class = "colorBtn" data-key = "white">White</button>
+    <button class = "colorBtn" data-key = "black">Black</button>
     <button id = "clear">Clear</button>
     <script src = "coloringPg.js"></script>
 </body>
