--- a/testing.html
+++ b/testing.html
@@ -20,6 +20,7 @@
     <button class = "colorBtn" data-key = "blue">Blue</button>
     <button class = "colorBtn" data-key = "purple">Purple</button>
     <button class = "colorBtn" data-key = "pink">Pink</button>
+    <button class = "colorBtn" data-key = "brown">Brown</button>
     <button class = "colorBtn" data-key = "white">White</button>
     <button class = "colorBtn" data-key = "black">Black</button>
     <button class = "colorBtn" data-key = "clear">Clear</button>
