--- a/testing.html
+++ b/testing.html
@@ -25,6 +25,7 @@
     <button class = "colorBtn" data-key = "black">Black</button>
     <button class = "colorBtn" data-key = "clear">Clear</button>
     <script src = "coloringPg.js"></script>
+    <script src = "algorithm.js"></script>
 </body>
 </html>
 
