--- a/testing.html
+++ b/testing.html
@@ -24,8 +24,8 @@
     <button class = "colorBtn" data-key = "white">White</button>
     <button class = "colorBtn" data-key = "black">Black</button>
     <button class = "colorBtn" data-key = "clear">Clear</button>
-    <script src = "coloringPg.js"></script>
     <script src = "pixelAlgorithm.js"></script>
+    <script src = "eventHandler.js"></script>
 </body>
 </html>
 
