--- a/testing.html
+++ b/testing.html
@@ -20,10 +20,10 @@
     <button class = "colorBtn" data-key = "blue">Blue</button>
     <button class = "colorBtn" data-key = "purple">Purple</button>
     <button class = "colorBtn" data-key = "pink">Pink</button>
+    <button class = "colorBtn" data-key = "gray">Grey</button>
     <button class = "colorBtn" data-key = "brown">Brown</button>
     <button class = "colorBtn" data-key = "white">White</button>
     <button class = "colorBtn" data-key = "black">Black</button>
-    <button class = "colorBtn" data-key = "clear">Clear</button>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "eventHandler.js"></script>
 </body>
