commented out file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome</h1>
     <label>Please pick an option</label>
     <a href = "testing.html">Freeplay</a>
-    <a href = someotherfile>Color by Number</a>
+    <!-- <a href = someotherfile>Color by Number</a> -->
     
 </body>
 </html>
