--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coloring Pg</title>
-    <style>
-        canvas {
-            border: 3px solid black;
-        }
-    </style>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
     <canvas height = "800" width = "800"></canvas>
-    <button class = "colorBtn" data-key = "red">Red</button>
-    <button class = "colorBtn" data-key = "orange">Orange</button>
-    <button class = "colorBtn" data-key = "yellow">Yellow</button>
-    <button class = "colorBtn" data-key = "green">Green</button>
-    <button class = "colorBtn" data-key = "blue">Blue</button>
-    <button class = "colorBtn" data-key = "purple">Purple</button>
-    <button class = "colorBtn" data-key = "pink">Pink</button>
-    <button class = "colorBtn" data-key = "gray">Grey</button>
-    <button class = "colorBtn" data-key = "brown">Brown</button>
-    <button class = "colorBtn" data-key = "white">White</button>
-    <button class = "colorBtn" data-key = "black">Black</button>
+    <button class = "colorBtn" data-key = "red" style = "background-color: red;">Red</button>
+    <button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red</button>
+    <button class = "colorBtn" data-key = "orange" style = "background-color: orange;">Orange</button>
+    <button class = "colorBtn" data-key = "yellow" style = "background-color: yellow;">Yellow</button>
+    <button class = "colorBtn" data-key = "yellowgreen" style = "background-color: yellowgreen;">Yellow-green</button>
+    <button class = "colorBtn" data-key = "green" style = "background-color: green;">Green</button>
+    <button class = "colorBtn" data-key = "rgb(66, 175, 212)" style = "background-color: rgb(66, 175, 212);">Light-blue</button>
+    <button class = "colorBtn" data-key = "rgb(32, 32, 205)" style = "background-color: rgb(32, 32, 205);">Blue</button>
+    <button class = "colorBtn" data-key = "blueviolet" style = "background-color: blueviolet;">Blue-violet</button>
+    <button class = "colorBtn" data-key = "purple" style = "background-color: purple;">Purple</button>
+    <button class = "colorBtn" data-key = "rgb(238, 89, 114)" style = "background-color: rgb(238, 89, 114);">Pink</button>
+    <button class = "colorBtn" data-key = "grey" style = "background-color: grey;">Grey</button>
+    <button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown</button>
+    <button class = "colorBtn" data-key = "white" style = "background-color: white;">White</button>
+    <button class = "colorBtn" data-key = "black" style = "background-color: black;">Black</button>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "eventHandler.js"></script>
 </body>
