--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button class = "colorBtn" data-key = "rgb(238, 89, 114)" style = "background-color: rgb(238, 89, 114);">Pink</button>
     <button class = "colorBtn" data-key = "grey" style = "background-color: grey;">Grey</button>
     <button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown</button>
-    <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White</button>
+    <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke</button>
     <button class = "colorBtn" data-key = "black" style = "background-color: black;">Black</button>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "eventHandler.js"></script>
