Changed formatting, added a feature to see selected color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
+    <h1>Freeplay</h1>
     <canvas height = "800" width = "800"></canvas>
     <button class = "colorBtn" data-key = "red" style = "background-color: red;">Red</button>
     <button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red</button>
@@ -24,6 +25,7 @@
     <button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown</button>
     <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke</button>
     <button class = "colorBtn" data-key = "black" style = "background-color: black;">Black</button>
+    <p id = "currentColor"></p>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "eventHandler.js"></script>
 </body>
