switched order of scripts

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke</button>
     <button class = "colorBtn" data-key = "black" style = "background-color: black;">Black</button>
     <script src = "pixelAlgorithm.js"></script>
+    <script src = "pictureArrays.js"></script>
     <script src = "eventHandler.js"></script>
 </body>
 </html>
