--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <h1>Freeplay</h1>
     <canvas height = "800" width = "800"></canvas>
-    <button class = "colorBtn" data-key = "red" style = "background-color: red;">Red</button>
-    <button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red</button>
-    <button class = "colorBtn" data-key = "orange" style = "background-color: orange;">Orange</button>
-    <button class = "colorBtn" data-key = "yellow" style = "background-color: yellow;">Yellow</button>
-    <button class = "colorBtn" data-key = "yellowgreen" style = "background-color: yellowgreen;">Yellow-green</button>
-    <button class = "colorBtn" data-key = "green" style = "background-color: green;">Green</button>
-    <button class = "colorBtn" data-key = "rgb(66, 175, 212)" style = "background-color: rgb(66, 175, 212);">Light-blue</button>
-    <button class = "colorBtn" data-key = "rgb(32, 32, 205)" style = "background-color: rgb(32, 32, 205);">Blue</button>
-    <button class = "colorBtn" data-key = "blueviolet" style = "background-color: blueviolet;">Blue-violet</button>
-    <button class = "colorBtn" data-key = "purple" style = "background-color: purple;">Purple</button>
-    <button class = "colorBtn" data-key = "rgb(238, 89, 114)" style = "background-color: rgb(238, 89, 114);">Pink</button>
-    <button class = "colorBtn" data-key = "grey" style = "background-color: grey;">Grey</button>
-    <button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown</button>
-    <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke</button>
-    <button class = "colorBtn" data-key = "black" style = "background-color: black;">Black</button>
+    <button class = "colorBtn" data-key = "red" style = "background-color: red;">Red (0)</button>
+    <button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red (1)</button>
+    <button class = "colorBtn" data-key = "orange" style = "background-color: orange;">Orange (2)</button>
+    <button class = "colorBtn" data-key = "yellow" style = "background-color: yellow;">Yellow (3)</button>
+    <button class = "colorBtn" data-key = "yellowgreen" style = "background-color: yellowgreen;">Yellow-green (4)</button>
+    <button class = "colorBtn" data-key = "green" style = "background-color: green;">Green (5)</button>
+    <button class = "colorBtn" data-key = "rgb(66, 175, 212)" style = "background-color: rgb(66, 175, 212);">Light-blue (6)</button>
+    <button class = "colorBtn" data-key = "rgb(32, 32, 205)" style = "background-color: rgb(32, 32, 205);">Blue (7)</button>
+    <button class = "colorBtn" data-key = "blueviolet" style = "background-color: blueviolet;">Blue-violet (8)</button>
+    <button class = "colorBtn" data-key = "purple" style = "background-color: purple;">Purple (9)</button>
+    <button class = "colorBtn" data-key = "rgb(238, 89, 114)" style = "background-color: rgb(238, 89, 114);">Pink (10)</button>
+    <button class = "colorBtn" data-key = "grey" style = "background-color: grey;">Grey (11)</button>
+    <button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown (12)</button>
+    <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button>
+    <button class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14))</button>
     <p id = "currentColor"></p>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "pictureArrays.js"></script>
