--- a/smn.html
+++ b/smn.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel = "stylesheet" href = "menu.css">
 </head>
 <body>
-    <h1>Welcome</h1>
-    <label>Please pick an option</label>
-    <a href = "testing.html">Freeplay</a>
+    <h1>Pixel Art Creator</h1>
+    <div class="options">
+        <p>Freeplay:</p>
+        <p>Color By Number:</p>
+        <button id="freeplay">Freeplay</button>
+        <button id="rainbowHeart">Heart</button>
+    </div>
+    <button class="leavePage" onclick="window.location.href='index.html'">Color!</button>
     <!-- <a href = someotherfile>Color by Number</a> -->
+    <script src = "pixelAlgorithm.js"></script>
+    <script src="array_organizer.js"></script>
 </body>
 </html>
