--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coloring Pg</title>
     <link rel = "stylesheet" href = "style.css">
+    <script type="text/javascript">
+        function zoom() {
+            document.body.style.zoom = "90%" 
+        }
+</script>
 </head>
-<body>
+<!-- <body onload="zoom()"> -->
     <canvas height = "800" width = "800"></canvas>
     <button class = "colorBtn" data-key = "red" style = "background-color: red;">Red (0)</button>
     <button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red (1)</button>
@@ -23,7 +28,7 @@
     <button class = "colorBtn" data-key = "grey" style = "background-color: grey;">Grey (11)</button>
     <button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown (12)</button>
     <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button>
-    <button class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14))</button>
+    <button id = "black" class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14)</button>
     <p id = "currentColor"></p>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "pictureArrays.js"></script>
