--- a/index.html
+++ b/index.html
@@ -4,36 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coloring Pg</title>
-    <link rel = "stylesheet" href = "style.css">
-    <script type="text/javascript">
-        function zoom() {
-            document.body.style.zoom = "90%" 
-        }
-</script>
+    <title>Home</title>
+    <link rel = "stylesheet" href = "menu.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
 </head>
-<!-- <body onload="zoom()"> -->
-    <canvas height = "800" width = "800"></canvas>
-    <button class = "colorBtn" data-key = "red" style = "background-color: red;">Red (0)</button>
-    <button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red (1)</button>
-    <button class = "colorBtn" data-key = "orange" style = "background-color: orange;">Orange (2)</button>
-    <button class = "colorBtn" data-key = "yellow" style = "background-color: yellow;">Yellow (3)</button>
-    <button class = "colorBtn" data-key = "yellowgreen" style = "background-color: yellowgreen;">Yellow-green (4)</button>
-    <button class = "colorBtn" data-key = "green" style = "background-color: green;">Green (5)</button>
-    <button class = "colorBtn" data-key = "rgb(66, 175, 212)" style = "background-color: rgb(66, 175, 212);">Light-blue (6)</button>
-    <button class = "colorBtn" data-key = "rgb(32, 32, 205)" style = "background-color: rgb(32, 32, 205);">Blue (7)</button>
-    <button class = "colorBtn" data-key = "blueviolet" style = "background-color: blueviolet;">Blue-violet (8)</button>
-    <button class = "colorBtn" data-key = "purple" style = "background-color: purple;">Purple (9)</button>
-    <button class = "colorBtn" data-key = "rgb(238, 89, 114)" style = "background-color: rgb(238, 89, 114);">Pink (10)</button>
-    <button class = "colorBtn" data-key = "grey" style = "background-color: grey;">Grey (11)</button>
-    <button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown (12)</button>
-    <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button>
-    <button id = "black" class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14)</button>
-    <p id = "currentColor"></p>
-    <script src = "pixelAlgorithm.js"></script>
-    <script src = "pictureArrays.js"></script>
-    <script src = "eventHandler.js"></script>
+<body>
+    <h1>Pixel Art Creator</h1>
+    <div class="options">
+        <p>Freeplay:</p>
+        <p>Color By Number:</p>
+        <button id="freeplay"> <img src="free.png" height="80", width="90"></button>
+        <button id="rainbowHeart"> <img src="">Heart</button>
+    </div>
+    <!-- <a href = someotherfile>Color by Number</a> -->
+    <script src="array_organizer.js"></script>
 </body>
 </html>
-
-
