Added clear button

--- a/screen.html
+++ b/screen.html
@@ -29,6 +29,7 @@
     <button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown (12)</button>
     <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button>
     <button id = "black" class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14)</button>
+    <button id="clear" style = "background-color: rgb(228, 178, 161)">Clear Canvas</button>
     <p id = "currentColor"></p>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "pictureArrays.js"></script>
