added body header

--- a/screen.html
+++ b/screen.html
@@ -13,6 +13,7 @@
 </script>
 </head>
 <!-- <body onload="zoom()"> -->
+<body>
     <canvas height = "800" width = "800"></canvas>
     <button class = "colorBtn" data-key = "red" style = "background-color: red;">Red (0)</button>
     <button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red (1)</button>
@@ -30,7 +31,7 @@
     <button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button>
     <button id = "black" class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14)</button>
     <button id="clear" style = "background-color: rgb(228, 178, 161)">Clear Canvas</button>
-    <p id = "currentColor"></p>
+    <p id = "currentColor">Current Color: Black (14)</p>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "pictureArrays.js"></script>
     <script src = "eventHandler.js"></script>
