bunch of changes

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         <p>Freeplay:</p>
         <p>Color By Number:</p>
         <button id="freeplay"> <img src="free.png" height="80", width="90"></button>
-        <button id="rainbowHeart"> <img src="">Heart</button>
+        <button id="rainbowHeart"><img src="rainbowHeart.png" height = "95", width = "90"></button>
+        <img src="">
+        <button id="ok"><img src="ok.png" height = "95" width = "90"></button>
+        <img src="">
+        <button id="surprise">Surprise me!</button>
+        
     </div>
     <!-- <a href = someotherfile>Color by Number</a> -->
+    <script>var exports = {};</script>
     <script src="array_organizer.js"></script>
 </body>
 </html>
