Added image to surprise button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="freeplay"> <img src="free.png" height="80", width="90"></button>
         <button id="rainbowHeart"><img src="rainbowHeart.png" height = "95", width = "90"></button>
         <button id="ok"><img src="ok.png" height = "95" width = "90"></button>
-        <button id="surprise">Surprise me!</button>
+        <button id="surprise"><img src="surprise.png" height="85" width="90" ></button>
     </div>
     <!-- <a href = someotherfile>Color by Number</a> -->
     <script>var exports = {};</script>
