changed classes and ids

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>Pixel Art Creator</h1>
     <div class="options">
         <button id="freeplay"> <img src="free.png" height="80", width="90"></button>
-        <button id="rainbowHeart"><img src="rainbowHeart.png" height = "95", width = "90"></button>
-        <button id="ok"><img src="ok.png" height = "95" width = "90"></button>
+        <button class="pgSelection" data-key="rainbowHeart"><img src="rainbowHeart.png" height = "95", width = "90"></button>
+        <button class="pgSelection" data-key="ok"><img src="ok.png" height = "95" width = "90"></button>
         <button id="surprise">Surprise me!</button>
     </div>
     <!-- <a href = someotherfile>Color by Number</a> -->
