--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <button id="freeplay"> <img src="free.png" height="80", width="90"></button>
         <button class="pgSelection" data-key="rainbowHeart"><img src="rainbowHeart.png" height = "95", width = "90"></button>
         <button class="pgSelection" data-key="ok"><img src="ok.png" height = "95" width = "90"></button>
-        <button class="pgSelection" data-key="helloWorld"><img src="helloWorld.png"></button>
-        <button id="surprise">Surprise me!</button>
+        <button class="pgSelection" data-key="helloWorld"><img src="helloWorld.png" height = "95" width = "90"></button>
+        <button class="pgSelection" data-key="sus"><img src="sus.png" height = "95" width = "90"></button>
+        <button id="surprise"><img src="surprise.png" height = "95" width = "90"></button>
     </div>
     <!-- <a href = someotherfile>Color by Number</a> -->
     <script>var exports = {};</script>
