--- a/screen.html
+++ b/screen.html
@@ -21,7 +21,7 @@
     <div class="directions">
         <div class="direct"><p>Directions:</p></div>
         <div class="direct"><p>Click - Color a pixel</p></div>
-        <div class="direct"><p>Double Click - Reset pixel</p></div>
+        <div class="direct"><p>Double Click - Reset pixel (freeplay only)</p></div>
         <div class="direct"><p>Buttons - Change color (current color displayed below)</p></div>
     </div>
     <p id = "currentColor">Current Color: Black (14)</p>
@@ -40,7 +40,7 @@
         <div class = "colorBtn"><button data-key = "grey" style = "background-color: grey;">Grey (11)</button></div>
         <div class = "colorBtn"><button data-key = "brown" style = "background-color: brown;">Brown (12)</button></div>
         <div class = "colorBtn"><button data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button></div>
-        <div class = "colorBtn"><button id = "black" class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14)</button></div>
+        <div class = "colorBtn"><button id = "black" data-key = "black" style = "background-color: black;">Black (14)</button></div>
         <div><button id="clear" style = "background-color: rgb(228, 178, 161)">Clear Canvas</button></div>
     </div>
     <script src = "pixelAlgorithm.js"></script>
