--- a/screen.html
+++ b/screen.html
@@ -21,6 +21,7 @@
     <div class="directions">
         <div class="direct"><p>Directions:</p></div>
         <div class="direct"><p>Click - Color a pixel</p></div>
+        <div class="direct"><p>Click & Drag - Color multiple pixels</p></div>    
         <div class="direct"><p>Double Click - Reset pixel (freeplay only)</p></div>
         <div class="direct"><p>Buttons - Change color (current color displayed below)</p></div>
     </div>
