--- a/screen.html
+++ b/screen.html
@@ -27,21 +27,21 @@
     </div>
     <p id = "currentColor">Current Color: Black (14)</p>
     <div class="container">
-        <div class = "colorBtn"><button data-key = "red" style = "background-color: red;">Red (0)</button></div>
-        <div class = "colorBtn"><button data-key = "orangered" style = "background-color: orangered;">Orange-red (1)</button></div>
-        <div class = "colorBtn"><button data-key = "orange" style = "background-color: orange;">Orange (2)</button></div>
-        <div class = "colorBtn"><button data-key = "yellow" style = "background-color: yellow;">Yellow (3)</button></div>
-        <div class = "colorBtn"><button data-key = "yellowgreen" style = "background-color: yellowgreen;">Yellow-green (4)</button></div>
-        <div class = "colorBtn"><button data-key = "green" style = "background-color: green;">Green (5)</button></div>
-        <div class = "colorBtn"><button data-key = "rgb(66, 175, 212)" style = "background-color: rgb(66, 175, 212);">Light-blue (6)</button></div>
-        <div class = "colorBtn"><button data-key = "rgb(32, 32, 205)" style = "background-color: rgb(32, 32, 205);">Blue (7)</button></div>
-        <div class = "colorBtn"><button data-key = "blueviolet" style = "background-color: blueviolet;">Blue-violet (8)</button></div>
-        <div class = "colorBtn"><button data-key = "purple" style = "background-color: purple;">Purple (9)</button></div>
-        <div class = "colorBtn"><button data-key = "rgb(238, 89, 114)" style = "background-color: rgb(238, 89, 114);">Pink (10)</button></div>
-        <div class = "colorBtn"><button data-key = "grey" style = "background-color: grey;">Grey (11)</button></div>
-        <div class = "colorBtn"><button data-key = "brown" style = "background-color: brown;">Brown (12)</button></div>
-        <div class = "colorBtn"><button data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button></div>
-        <div class = "colorBtn"><button id = "black" data-key = "black" style = "background-color: black;">Black (14)</button></div>
+        <div><button class = "colorBtn" data-key = "red" style = "background-color: red;">Red (0)</button></div>
+        <div><button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red (1)</button></div>
+        <div><button class = "colorBtn" data-key = "orange" style = "background-color: orange;">Orange (2)</button></div>
+        <div><button class = "colorBtn" data-key = "yellow" style = "background-color: yellow;">Yellow (3)</button></div>
+        <div><button class = "colorBtn" data-key = "yellowgreen" style = "background-color: yellowgreen;">Yellow-green (4)</button></div>
+        <div><button class = "colorBtn" data-key = "green" style = "background-color: green;">Green (5)</button></div>
+        <div><button class = "colorBtn" data-key = "rgb(66, 175, 212)" style = "background-color: rgb(66, 175, 212);">Light-blue (6)</button></div>
+        <div><button class = "colorBtn" data-key = "rgb(32, 32, 205)" style = "background-color: rgb(32, 32, 205);">Blue (7)</button></div>
+        <div><button class = "colorBtn" data-key = "blueviolet" style = "background-color: blueviolet;">Blue-violet (8)</button></div>
+        <div><button class = "colorBtn" data-key = "purple" style = "background-color: purple;">Purple (9)</button></div>
+        <div><button class = "colorBtn" data-key = "rgb(238, 89, 114)" style = "background-color: rgb(238, 89, 114);">Pink (10)</button></div>
+        <div><button class = "colorBtn" data-key = "grey" style = "background-color: grey;">Grey (11)</button></div>
+        <div><button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown (12)</button></div>
+        <div><button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button></div>
+        <div><button id = "black" class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14)</button></div>
         <div><button id="clear" style = "background-color: rgb(228, 178, 161)">Clear Canvas</button></div>
     </div>
     <script src = "pixelAlgorithm.js"></script>
