added home page and music feature

--- a/screen.html
+++ b/screen.html
@@ -26,6 +26,7 @@
         <div class="direct"><p>Buttons - Change color (current color displayed below)</p></div>
     </div>
     <p id = "currentColor">Current Color: Black (14)</p>
+    <p id = "currentScreen">Current Screen: </p>
     <div class="container">
         <div><button class = "colorBtn" data-key = "red" style = "background-color: red;">Red (0)</button></div>
         <div><button class = "colorBtn" data-key = "orangered" style = "background-color: orangered;">Orange-red (1)</button></div>
@@ -43,10 +44,14 @@
         <div><button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button></div>
         <div><button id = "black" class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14)</button></div>
         <div><button id="clear" style = "background-color: rgb(228, 178, 161)">Clear Canvas</button></div>
+        <div><a href = "index.html"><button>Home Screen</button></a></div>
     </div>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "pictureArrays.js"></script>
     <script src = "eventHandler.js"></script>
+    <audio controls autoplay loop>
+        <source src="piano.mp3" type="audio/mpeg">
+    </audio> 
 </body>
 </html>
 
