--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button class="pgSelection" data-key="ok"><img src="ok.png" height = "95" width = "90"></button>
         <button class="pgSelection" data-key="helloWorld"><img src="helloWorld.png" height = "95" width = "90"></button>
         <button class="pgSelection" data-key="sus"><img src="sus.png" height = "95" width = "90"></button>
+        <button class="pgSelection" data-key="shroom"><img src="mushroom.png" height = "95" width = "90"></button>
         <button id="surprise"><img src="surprise.png" height = "95" width = "90"></button>
     </div>
     <!-- <a href = someotherfile>Color by Number</a> -->
