--- a/screen.html
+++ b/screen.html
@@ -50,7 +50,8 @@
     <script src = "eventHandler.js"></script>
     <audio controls autoplay loop>
         <source src="piano.mp3" type="audio/mpeg">
-    </audio> 
+    </audio>
+    <p>Rick Astley - Never Gonna Give You Up: Piano Cover by LittleTranscriber on YouTube</p> 
 </body>
 </html>
 
