--- a/screen.html
+++ b/screen.html
@@ -42,8 +42,10 @@
         <div><button class = "colorBtn" data-key = "brown" style = "background-color: brown;">Brown (12)</button></div>
         <div><button class = "colorBtn" data-key = "whitesmoke" style = "background-color: whitesmoke;">White-smoke (13)</button></div>
         <div><button id = "black" class = "colorBtn" data-key = "black" style = "background-color: black;">Black (14)</button></div>
+    </div>
+    <div class="container">
         <div><button id="clear" style = "background-color: rgb(228, 178, 161)">Clear Canvas</button></div>
-        <div><a href = "index.html"><button>Home Screen</button></a></div>
+        <div><a id="goHome" href = "index.html"><button style = "background-color: rgb(228, 178, 161)">Home Screen</button></a></div>
     </div>
     <script src = "pixelAlgorithm.js"></script>
     <script src = "pictureArrays.js"></script>
