moved files into folders

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel = "stylesheet" href = "menu.css">
+    <link rel = "stylesheet" href = "styleSheets/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
@@ -13,13 +13,13 @@
 <body>
     <h1>Pixel Art Creator</h1>
     <div class="options">
-        <button id="freeplay"> <img src="free.png" height="80", width="90"></button>
-        <button id="surprise"><img src="surprise.png" height = "95" width = "90"></button>
-        <button class="pgSelection" data-key="rainbowHeart"><img src="rainbowHeart.png" height = "95", width = "90"></button>
-        <button class="pgSelection" data-key="ok"><img src="ok.png" height = "95" width = "90"></button>
-        <button class="pgSelection" data-key="helloWorld"><img src="helloWorld.png" height = "95" width = "90"></button>
-        <button class="pgSelection" data-key="sus"><img src="sus.png" height = "95" width = "90"></button>
-        <button class="pgSelection" data-key="shroom"><img src="mushroom.png" height = "95" width = "90"></button>
+        <button id="freeplay"> <img src="media/free.png" height="80", width="90"></button>
+        <button id="surprise"><img src="media/surprise.png" height = "95" width = "90"></button>
+        <button class="pgSelection" data-key="rainbowHeart"><img src="media/rainbowHeart.png" height = "95", width = "90"></button>
+        <button class="pgSelection" data-key="ok"><img src="media/ok.png" height = "95" width = "90"></button>
+        <button class="pgSelection" data-key="helloWorld"><img src="media/helloWorld.png" height = "95" width = "90"></button>
+        <button class="pgSelection" data-key="sus"><img src="media/sus.png" height = "95" width = "90"></button>
+        <button class="pgSelection" data-key="shroom"><img src="media/mushroom.png" height = "95" width = "90"></button>
     </div>
     <!-- <a href = someotherfile>Color by Number</a> -->
     <script>var exports = {};</script>
