--- a/screen.html
+++ b/screen.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coloring Pg</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "styleSheets/screen.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
     <script src = "pictureArrays.js"></script>
     <script src = "eventHandler.js"></script>
     <audio controls autoplay loop>
-        <source src="piano.mp3" type="audio/mpeg">
+        <source src="media/piano.mp3" type="audio/mpeg">
     </audio>
     <p>Rick Astley - Never Gonna Give You Up: Piano Cover by LittleTranscriber on YouTube</p> 
 </body>
