added christmas tree pic

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button class="pgSelection" data-key="shroom"><img src="media/mushroom.png" height = "95" width = "90"></button>
         <button class="pgSelection" data-key="parrot"><img src="media/parrot.png" height = "95" width = "90"></button>
         <button class="pgSelection" data-key="squid"><img src="media/squid.png" height = "95" width = "90"></button>
+        <button class="pgSelection" data-key="tree"><img src = "media/tree.png" height = "95" width = "90"></button>
     </div>
     <!-- <a href = someotherfile>Color by Number</a> -->
     <script>var exports = {};</script>
