added some stuff

--- a/screen.html
+++ b/screen.html
@@ -53,7 +53,7 @@
     <audio controls autoplay loop>
         <source src="media/piano.mp3" type="audio/mpeg">
     </audio>
-    <p>Rick Astley - Never Gonna Give You Up: Piano Cover by LittleTranscriber on YouTube</p> 
+    <p id = "citation">Rick Astley - Never Gonna Give You Up: Piano Cover by LittleTranscriber on YouTube</p> 
 </body>
 </html>
 
